# OpenCVDemo

./: ReadMe.txt  settings.gradle
FaceDetect/: build.gradle
FaceDetect/src/androidTest/java/com/liu/opencvdemo/: ExampleInstrumentedTest.java
FaceDetect/src/main/: AndroidManifest.xml
FaceDetect/src/main/cpp/: CMakeLists.txt  DetectionBasedTracker_jni.cpp  DetectionBasedTracker_jni.h
FaceDetect/src/main/java/com/opencv/: BaseActivity.java
FaceDetect/src/main/java/com/opencv/detect/: CameraBaseActivity.java  EyeRenderActivity.java  ImageActivity.java  MainActivity.java
FaceDetect/src/main/res/drawable/: selector_rewardcamera.xml
FaceDetect/src/main/res/layout/: activity_camera.xml  activity_image.xml  activity_main.xml
FaceDetect/src/main/res/layout-land/: activity_camera.xml
FaceDetect/src/main/res/values/: strings.xml
app/: build.gradle
app/src/androidTest/java/com/liu/opencvdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_part.cpp
app/src/main/java/com/liu/opencvdemo/: BaseActivity.java  CameraBaseActivity.java  CameraHonActivity.java  CameraVerActivity.java  ImageActivity.java  MainActivity.java
app/src/main/java/com/liu/opencvdemo/adapter/: ImageAdapter.java
app/src/main/res/drawable/: selector_bg_red_gray.xml
app/src/main/res/layout/: activity_camera_hon.xml  activity_camera_ver.xml  activity_image.xml  activity_main.xml  item_image_filter.xml  tutorial3_surface_view.xml
app/src/main/res/menu/: calibration.xml  menu_main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/xml/: file_paths.xml
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary330/: build.gradle
openCVLibrary330/src/main/java/org/opencv/android/: CameraBridgeViewBase.java  JavaCameraView.java
openCVLibrary330/src/main/java/org/opencv/xfeatures2d/: FREAK.java  PCTSignatures.java  PCTSignaturesSQFD.java  VGG.java
(+26 files in other folders)
